<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryBackground"
    tools:context=".DareDetails">

    <TextView
        android:id="@+id/amountText2"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/amountText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/amount"
        app:layout_constraintStart_toStartOf="@+id/dareText" />

    <EditText
        android:id="@+id/drinks"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/drinkamount1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/dareText"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:onClick="back"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_action" />

    <EditText
        android:id="@+id/amount"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/dareText"
        app:layout_constraintTop_toBottomOf="@+id/dareText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/dareText"
        style="@style/WhiteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/add_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxHeight="500dp"
        android:maxLength="100"
        android:singleLine="false"
        android:text="@string/dare"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <Button
        android:id="@+id/button4"
        style="@style/BlueGradientBtn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="confirmDelete"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/addItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addItem"
        style="@style/BlueGradientBtn"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="firestore"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/drinkBool"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/checkbox"
        android:checked="true"
        android:text="@string/drinkAmount"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/drinks"
        app:layout_constraintStart_toStartOf="@+id/dareText" />

</androidx.constraintlayout.widget.ConstraintLayout>

