<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryBackground"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="150dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            style="@style/BlueGradientBtn"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="playActivity"
            android:text="@string/playBtn" />

        <Button
            style="@style/BlueGradientBtn"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="addActivity"
            android:text="@string/addBtn" />

        <Button
            style="@style/BlueGradientBtn"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="setupActivity"
            android:text="@string/setupBtn" />


        <Button
            style="@style/BlueGradientBtn"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="creditActivity"
            android:text="@string/creditsBtn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>